--- a/Chat/chatclient/index.html
+++ b/Chat/chatclient/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html ng-app="ChatApp">
 <head>
-	<title>Test</title>
 	
+	<meta charset="utf-8">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Test</title>
 
-
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
+	
 </head>
 <body>
 	<div ng-view></div>
 
-	<script type="text/javascript" src="js/lib/angular.min.js"></script>
-	<script type="text/javascript" src="js/lib/angular-resource.min.js"></script>
-	<script type="text/javascript" src="js/lib/angular-route.min.js"></script>
-	<script type="text/javascript" src="js/lib/angular-route.min.js.map"></script>
-	<script="http://localhost:8080/socket.io/socket.io.js/"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script src="js/lib/angular.min.js"></script>
+	
+	<script src="js/lib/angular-route.min.js"></script>
+	
+	<script src="http://localhost:8080/socket.io/socket.io.js/"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
